update negative bar chart navigate to survey reason

--- a/EmotionFrontend/src/app/survey/survey.component.html
+++ b/EmotionFrontend/src/app/survey/survey.component.html
@@ -4,6 +4,7 @@
 <div style="display: flex; justify-content: center; align-items: center;">
     <app-select-time-dropdown></app-select-time-dropdown>
     <app-reflect-button></app-reflect-button>
+    <div class="flex fixed bottom-20 right-12">
     <button
     type="button"
     class="inline-flex items-center rounded-md bg-black px-3 py-2 text-sm font-semibold text-white hover:bg-black hover:bg-opacity-80 mb-2 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black"
@@ -25,6 +26,6 @@
             <polyline points="12 5 19 12 12 19"></polyline>
         </svg>
     </button>
-
+</div>
 </div>
 
