add reflect button at neg bar

--- a/EmotionFrontend/src/app/negative-barchart/negative-barchart.component.html
+++ b/EmotionFrontend/src/app/negative-barchart/negative-barchart.component.html
@@ -13,6 +13,8 @@
           >
         </canvas>
         </div>
+        <div>
+          <app-reflect-button></app-reflect-button>
         <div class="flex fixed bottom-20 right-12">
           <button
             type="button"
@@ -38,5 +40,7 @@
           </button>
         </div>
     </div>
+    </div>
     
 </div>
+
