ADD note title for weiyin to present

--- a/EmotionFrontend/src/app/statics/statics.component.html
+++ b/EmotionFrontend/src/app/statics/statics.component.html
@@ -17,7 +17,7 @@
 
 <div>
   <ul *ngFor="let item of emoReadWrite">
-    <li>{{item._id}} {{item.ActionType}} {{item.UserID}} {{item.Timestamp}} {{item.Anxious}} {{item.Anxious_Intensity}}</li>
+    <li>{{item._id}} {{item.NoteTitle}} {{item.ActionType}} {{item.UserID}}  {{item.Anxious}} {{item.Anxious_Intensity}} {{item.Timestamp}}</li>
   </ul>
 </div>
 <!--{{Tests|json}}-->
