--- a/EmotionFrontend/src/app/reflect-form/reflect-form.component.html
+++ b/EmotionFrontend/src/app/reflect-form/reflect-form.component.html
@@ -6,13 +6,13 @@
     <div class="question-block blue-bg">
       <h1 class="question-block-heading">Our analysis</h1>
       <label for="q1">What do you see in the visualizations?</label>
-      <input type="text" name="q1" maxlength="100" [(ngModel)]="formData.Visualization" (ngModelChange)="checkIfAllQuestionsAnswered()"/>
+      <textarea name="q1" maxlength="500" [(ngModel)]="formData.Visualization" (ngModelChange)="checkIfAllQuestionsAnswered()"></textarea>
 
       <label for="q2"
         >Based on the analysis results, what emotional challenges do we have
         during the Knowledge Building?</label
       >
-      <input type="text" name="q2" maxlength="100" [(ngModel)]="formData.Challenges" (ngModelChange)="checkIfAllQuestionsAnswered()"/>
+      <textarea name="q2" maxlength="500" [(ngModel)]="formData.Challenges" (ngModelChange)="checkIfAllQuestionsAnswered()"></textarea>
     </div>
   </div>
 
@@ -21,13 +21,13 @@
     <div class="question-block blue-bg">
       <h1 class="question-block-heading">Our reflection</h1>
       <label for="q3">Which aspects do you think we can do better?</label>
-      <input type="text" name="q3" maxlength="100" [(ngModel)]="formData.ImprovementWays" (ngModelChange)="checkIfAllQuestionsAnswered()"/>
+      <textarea name="q3" maxlength="500" [(ngModel)]="formData.ImprovementWays" (ngModelChange)="checkIfAllQuestionsAnswered()"></textarea>
 
       <label for="q4"
         >How can we create a more positive emotional environment to support our
         Knowledge Building?</label
       >
-      <input type="text" name="q4" maxlength="100" [(ngModel)]="formData.PositivePlan" (ngModelChange)="checkIfAllQuestionsAnswered()"/>
+      <textarea name="q4" maxlength="500" [(ngModel)]="formData.PositivePlan" (ngModelChange)="checkIfAllQuestionsAnswered()"></textarea>
     </div>
   </div>
 
@@ -39,7 +39,7 @@
         >What is our specific action plan for creating a supportive emotional
         environment?</label
       >
-      <input type="text" name="q5" maxlength="100" [(ngModel)]="formData.Action" (ngModelChange)="checkIfAllQuestionsAnswered()"/>
+      <textarea name="q5" maxlength="500" [(ngModel)]="formData.Action" (ngModelChange)="checkIfAllQuestionsAnswered()"></textarea>
     </div>
   </div>
 </div>
