update the style of survey align with note

--- a/EmotionFrontend/src/app/bar-chart/bar-chart.component.html
+++ b/EmotionFrontend/src/app/bar-chart/bar-chart.component.html
@@ -1,5 +1,5 @@
 <div>
-    <div class="container">
+    <!-- <div class="container"> -->
       <div style="display:block" class="barchart-container">
         <canvas baseChart
           class="chart"
@@ -12,7 +12,7 @@
           (chartClick)="handleChartClick($event)">
         </canvas>
       </div>
-    </div>
+    <!-- </div> -->
 </div>
 <!--          [datasets]= "barChartData"-->
 <!--[data]="barChartData"-->
