--- a/EmotionFrontend/src/app/bar-chart/bar-chart.component.css
+++ b/EmotionFrontend/src/app/bar-chart/bar-chart.component.css
@@ -2,18 +2,18 @@ p {
   font-family: Lato;
 }
 
-.container {
+/* .container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-}
+  /* align-items: center; 
+} */
 
 .barchart-container {
   margin-top: 12px;
-  width: 100%;
+  width: 90%;
   padding-left: 50px;
   overflow: hidden;
   display: block;
-  width: 70%;
+  /* width: 70%; */
 }
 
