--- a/EmotionFrontend/src/app/survey/survey.component.css
+++ b/EmotionFrontend/src/app/survey/survey.component.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.dashboard-container {
+    display: flex;
+  }
+  
+  .left-section {
+    width: 50%;
+    flex: 1; /* This will make the left section take up the available space */
+  }
+  
+  .right-section {
+    margin-top: 50px;
+    width: 40%; /* You can adjust the width as needed for the right section */
+  }
