update the style of inconducive chart

--- a/EmotionFrontend/src/app/inconducive/inconducive.component.css
+++ b/EmotionFrontend/src/app/inconducive/inconducive.component.css
@@ -2,16 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
-.survey-container {
+.inconducive-container {
     display: flex;
   }
   
-  .left-section {
+.left-section {
     width: 50%;
     flex: 1; /* This will make the left section take up the available space */
-  }
+}
   
-  .right-section {
+.right-section {
     margin-top: 50px;
     width: 40%; /* You can adjust the width as needed for the right section */
+}
+
+button.button:hover { 
+    text-decoration: none;
+    background-color: #a9a9a9; /* Dark grey color */
   }
