--- a/EmotionFrontend/src/app/negative-barchart/negative-barchart.component.css
+++ b/EmotionFrontend/src/app/negative-barchart/negative-barchart.component.css
@@ -1,25 +1,20 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-
 p {
     font-family: Lato;
   }
   
-.container {
+/* .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   position: relative;
-}
+} */
 
 .barchart-container {
   margin-top: 20px;
-  width: 100%;
+  width: 90%;
   padding-left: 50px;
   overflow: hidden;
   display: block;
-  width: 70%;
+  /* width: 70%; */
 }
   
