--- a/EmotionFrontend/src/app/survey/survey.component.html
+++ b/EmotionFrontend/src/app/survey/survey.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="dashboard-container">
+<div class="survey-container">
     <div class="left-section">
       <app-bar-chart></app-bar-chart>
     </div>
