--- a/EmotionFrontend/src/app/emotion-rating/emotion-rating.component.css
+++ b/EmotionFrontend/src/app/emotion-rating/emotion-rating.component.css
@@ -5,3 +5,57 @@
   height: 100%;
   overflow: auto;
 }
+
+.nav-link.active {
+  background-color: #0D6EFD; /* Set your desired background color for the active nav-link */
+  /* Set your desired text color for the active nav-link */
+}
+
+.container {
+  padding: 20px;
+}
+
+.survey-section {
+  background-color: #f8f9fa; /* Light gray background color */
+  border: 1px solid #dee2e6; /* Border color */
+  border-radius: 8px; /* Rounded corners */
+  margin-bottom: 20px; /* Spacing between sections */
+  padding: 20px; /* Padding inside each section */
+}
+
+.question-answer {
+  margin-bottom: 15px; /* Spacing between question and answer */
+}
+
+.question {
+  font-weight: bold;
+  font-size: 18px; /* Adjust font size */
+  margin-bottom: 8px; /* Spacing below the question */
+}
+
+.answer { 
+  font-size: 16px; /* Adjust font size */
+}
+
+.section-divider {
+  border-top: 1px solid #ccc; /* Border color for section divider */
+  margin-top: 20px; /* Spacing above the divider */
+  margin-bottom: 20px; /* Spacing below the divider */
+}
+
+.sidebar {
+  background-color: #ffffe2; 
+  color: black;
+  padding: 10px; /* Padding inside the sidebar items */
+  border-radius: 8px; /* Rounded corners */
+}
+
+.sidebar .nav-link {
+  color: black; /* White text color for sidebar links */
+  font-size: 16px; /* Adjust font size */
+  margin-bottom: 10px; /* Spacing between sidebar links */
+}
+
+.sidebar .nav-link.active {
+  background-color: #0056b3; /* Darker blue background color for active link */
+}
