--- a/EmotionFrontend/src/app/emotion-rating/emotion-rating.component.html
+++ b/EmotionFrontend/src/app/emotion-rating/emotion-rating.component.html
@@ -1,19 +1,23 @@
 <app-header></app-header>
 <div class="container">
 	<section>
-        <h3>{{datasetLabel}}</h3>
-		<h3>{{title}}</h3>
+		<h3>{{title}} : {{datasetLabel}}</h3>
 	</section>
 	<div class="d-flex flex-column flex-md-row" >
 	<div class="col-10" >
 	  <div class="scrollspy-example scrollspy-container">
 		<div *ngFor="let emoReadWrite of filteredEmoReadWrite; let i = index">
-		<section [mdbScrollspyElement]="'scrollspy'" [id]="'example-' + (currentSectionNumber + i)">
-			  <h3>Section {{ currentSectionNumber + i }}</h3>
-			  <p>{{ emoReadWrite.NoteID }}</p>
-			  <p>{{ emoReadWrite.NoteTitle }}</p> 
-			  <p>{{ emoReadWrite.NoteContent}}</p>
-			  <hr>
+		<section [mdbScrollspyElement]="'scrollspy'" [id]="'example-' + (currentSectionNumber + i)" class="survey-section">
+			  <h3>Note {{ currentSectionNumber + i }}</h3>
+			  <div class="question-answer">
+				<p class="question">Note ID: </p>
+				<p class="answer">{{ emoReadWrite.NoteID }}</p>
+				<p class="question">Title: </p>
+				<p>{{ emoReadWrite.NoteTitle }}</p> 
+				<p class="question">Content: </p>
+				<p>{{ emoReadWrite.NoteContent}}</p>
+				<hr class="section-divider">
+			</div>
 			
 		  </section>
 		</div>
@@ -21,11 +25,12 @@
 	  </div>
 	</div>
   
-	<div class="col-2">
-	  <div id="scrollspy" class="sticky-top" style="height: 100%; z-index: 1;">
+	<div class="col-2" style="position: sticky; top:0; justify-content: center; align-items: center;padding-left: 15px;">
+	  <div id="scrollspy" style=" position: fixed; z-index: 1; height: 70%; overflow: auto;" class="sidebar">
 		<ul [mdbScrollspy]="'scrollspy'" class="nav flex-column nav-pills menu-sidebar">
 			<li class="nav-item" *ngFor="let emoReadWrite of filteredEmoReadWrite; let i = index">
-			  <a [mdbScrollspyLink]="'example-' + (currentSectionNumber + i)" class="nav-link">Section {{ currentSectionNumber + i }}</a>
+			  <a [mdbScrollspyLink]="'example-' + (currentSectionNumber + i)" class="nav-link" style="cursor:pointer;">
+				Note {{ currentSectionNumber + i }}</a>
 			</li>
 		  
 
