can select members and add to reflection history

--- a/EmotionFrontend/src/app/reflect-form/reflect-form.component.html
+++ b/EmotionFrontend/src/app/reflect-form/reflect-form.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<app-select-member-dropdown></app-select-member-dropdown>
+<app-select-member-dropdown (userSelected)="onUserSelected($event)"></app-select-member-dropdown>
 
 <div class="form-container">
   <div class="left-section">
