--- a/EmotionFrontend/src/app/select-member-dropdown/select-member-dropdown.component.html
+++ b/EmotionFrontend/src/app/select-member-dropdown/select-member-dropdown.component.html
@@ -1,5 +1,7 @@
 <nz-select
   nzMode="multiple"
+  (ngModelChange)="onUserSelected($event)"
+  (nzOnSearch)="onSearch($event)" 
   nzPlaceHolder="Group Members:     [select authors]"
   nzAllowClear
   nzShowSearch
