added select view functionality

--- a/EmotionFrontend/src/app/dashboard/dashboard.component.html
+++ b/EmotionFrontend/src/app/dashboard/dashboard.component.html
@@ -6,6 +6,7 @@
 
   <div class="right-section">
     <app-select-time-dropdown></app-select-time-dropdown>
+    <app-select-view-dropdown></app-select-view-dropdown>
     <app-reflect-button></app-reflect-button>
   </div>
 </div>
