update intensity on emotion notes

--- a/EmotionFrontend/src/app/emotion-rating/emotion-rating.component.html
+++ b/EmotionFrontend/src/app/emotion-rating/emotion-rating.component.html
@@ -17,6 +17,8 @@
 				<p>{{ emoReadWrite.NoteTitle }}</p> 
 				<p class="question">Content: </p>
 				<p>{{ emoReadWrite.NoteContent}}</p>
+				<app-star-rating [intensity]="emoReadWrite.Joyful_Intensity"></app-star-rating>
+
 				<hr class="section-divider">
 			</div>
 			
