--- a/EmotionFrontend/src/app/bar-chart/bar-chart.component.html
+++ b/EmotionFrontend/src/app/bar-chart/bar-chart.component.html
@@ -8,8 +8,7 @@
           [options] = "barChartOptions"
           [plugins] = "barChartPlugins"
           [legend] = "barChartLegend"
-          [type] = "barChartType"
-          (chartClick)="handleChartClick($event)">
+          [type] = "barChartType">
         </canvas>
       </div>
     <!-- </div> -->
