--- a/EmotionFrontend/src/app/dashboard/dashboard.component.html
+++ b/EmotionFrontend/src/app/dashboard/dashboard.component.html
@@ -5,6 +5,12 @@
   </div>
 
   <div class="right-section">
+    <div class="user-guide-container">
+      <p style="font-size: 25px;">User Guide:</p>
+      <ul>
+        <li><p>User can click on radar chart data point to view detailed notes</p></li>
+      </ul>
+    </div>
     <app-select-time-dropdown></app-select-time-dropdown>
     <app-select-view-dropdown></app-select-view-dropdown>
     <app-reflect-button></app-reflect-button>
