--- a/EmotionFrontend/src/app/dashboard/dashboard.component.css
+++ b/EmotionFrontend/src/app/dashboard/dashboard.component.css
@@ -1,36 +1,11 @@
 .dashboard-container {
   display: flex;
+  justify-content: space-between;
 }
 
-.left-section {
-  width: 50%;
-  flex: 1; /* This will make the left section take up the available space */
+.radar-chart-container {
+  flex: 1;
+  /* margin-right: 10px; Optional: Adjust margin between charts */
 }
 
-.right-section {
-  margin-top: 50px;
-  width: 50%; /* You can adjust the width as needed for the right section */
-}
-
-.user-guide-container {
-  background-color: #D3D3D3; /* Bright blue background color */
-  border-radius: 10px; /* Rounded corners */
-  padding: 15px; /* Add padding for content spacing */
-  width: 85%;
-  margin-bottom: 40px;
-  border: 2px solid #1f2d3d; /* Dark blue border color */
-}
-
-.user-guide-container h3 {
-  color: #000; /* White text color */
-}
-
-.user-guide-container h4 {
-  color: #000; /* White text color */
-}
-
-.user-guide-container ul {
-  list-style-type: disc; /* Use disc bullet points */
-  color: #000;
-}
 
