change the position of reflect button

--- a/EmotionFrontend/src/app/header/header.component.css
+++ b/EmotionFrontend/src/app/header/header.component.css
@@ -36,3 +36,11 @@
 .header-container .survey.active {
   color: black; /* Apply grey color for the active state */
 }
+
+.flex-spacer {
+  flex: 1;
+}
+
+.reflect-button{
+  margin-right: 20px;
+}
