--- a/EmotionFrontend/src/app/inconducive/inconducive.component.css
+++ b/EmotionFrontend/src/app/inconducive/inconducive.component.css
@@ -14,6 +14,8 @@
 .right-section {
     margin-top: 50px;
     width: 40%; /* You can adjust the width as needed for the right section */
+    display: flex;
+    flex-direction: column;
 }
 
 button.button:hover { 
