--- a/EmotionFrontend/src/app/inconducive/inconducive.component.html
+++ b/EmotionFrontend/src/app/inconducive/inconducive.component.html
@@ -6,11 +6,11 @@
 
     <div class="right-section">
         <app-select-time-dropdown></app-select-time-dropdown>
-        <app-reflect-button></app-reflect-button>
       
         <button
             type="button"
             class="button inline-flex items-center rounded-md bg-black px-3 py-2 text-sm font-semibold text-white mb-2 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black"
+            style="max-width: 200px;"
             (click)="navigate()">
             Survey Overview 
                 <svg
