--- a/EmotionFrontend/src/app/popup-window/popup-window.component.html
+++ b/EmotionFrontend/src/app/popup-window/popup-window.component.html
@@ -13,6 +13,8 @@
       </d-form-item>
       <div *ngIf="isShow">
         <d-form-item>
+          <d-form-label>1 star means weak, 2 stars mean moderate, 3 stars mean strong.
+          </d-form-label>
           <d-form-label>I feel</d-form-label>
           <d-form-control [style.width.%]="80" >
             <section>
