change reflect button style

--- a/EmotionFrontend/src/app/reflect-button/reflect-button.component.css
+++ b/EmotionFrontend/src/app/reflect-button/reflect-button.component.css
@@ -1,21 +1,21 @@
 .button-50 {
     appearance: button;
-    background-color: #000;
+    background-color: transparent;
     background-image: none;
-    border: 1px solid #000;
-    border-radius: 4px;
-    box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px;
+    border: 2px solid #000;
+    border-radius: 15px;
+    /* box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px; */
     box-sizing: border-box;
-    color: #fff;
+    color: black;
     cursor: pointer;
     display: inline-block;
     font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;
-    font-size: 14px;
-    font-weight: 400;
+    font-size: 15px;
+    font-weight: 600;
     line-height: 20px;
     margin: 0 5px 10px 0;
     overflow: visible;
-    padding: 12px 40px;
+    padding: 12px 20px;
     text-align: center;
     text-transform: none;
     touch-action: manipulation;
@@ -33,7 +33,8 @@
   
   .button-50:hover {
     text-decoration: none;
-    background-color: #a9a9a9; /* Dark grey color */
+    background-color: black;
+    color: #fff; /* Dark grey color */
   }
   
   .button-50:active {
@@ -41,10 +42,10 @@
     outline: 0;
   }
   
-  .button-50:not([disabled]):active {
+  /* .button-50:not([disabled]):active {
     box-shadow: #fff 2px 2px 0 0, #000 2px 2px 0 1px;
     transform: translate(2px, 2px);
-  }
+  } */
   
   @media (min-width: 768px) {
     .button-50 {
