--- a/EmotionFrontend/src/app/intensity-dropdown/intensity-dropdown.component.html
+++ b/EmotionFrontend/src/app/intensity-dropdown/intensity-dropdown.component.html
@@ -1,12 +1,10 @@
-<button nz-button nz-dropdown [nzDropdownMenu]="menu4" class="custom-button">
+<button nz-button nz-dropdown [nzDropdownMenu]="menu4" class="custom-button"style="width: 150px;">
     {{ selectedValue }} 
     <span nz-icon nzType="down"></span>
 </button>
 <nz-dropdown-menu #menu4="nzDropdownMenu">
 <ul nz-menu>
-    <li nz-menu-item (click)="selectedValue = 'All'">All</li>
-    <li nz-menu-item (click)="selectedValue = '3 stars'">3 stars</li>
-    <li nz-menu-item (click)="selectedValue = '2 stars'">2 stars</li>
-    <li nz-menu-item (click)="selectedValue = '1 star'">1 star</li>
+    <li nz-menu-item (click)="selectValue('Date and Time')">Date and Time</li>
+    <li nz-menu-item (click)="selectValue('Intensity')">Intensity</li>
 </ul>
 </nz-dropdown-menu>
