--- a/EmotionFrontend/src/app/reflect-form/reflect-form.component.css
+++ b/EmotionFrontend/src/app/reflect-form/reflect-form.component.css
@@ -48,7 +48,7 @@
   /*  rgba(148, 187, 233, 1) 80%*/
   /*);*/
   border-style:solid;
-  border-width:4px;
+  border-width:3px;
 }
 
 
@@ -81,6 +81,7 @@
   margin-top: 5px;
   margin-bottom: 20px;
   box-sizing: border-box;
+  resize: none; /* Disable resizing */
 }
 
 .submit-block {
