fixed user guide and created button

--- a/EmotionFrontend/src/app/dashboard/dashboard.component.html
+++ b/EmotionFrontend/src/app/dashboard/dashboard.component.html
@@ -12,3 +12,4 @@
     <app-radar-chart-writing></app-radar-chart-writing>
   </div>
 </div>
+<app-report-emotion-button></app-report-emotion-button>
