link the form to button

--- a/EmotionFrontend/src/app/dashboard/dashboard.component.html
+++ b/EmotionFrontend/src/app/dashboard/dashboard.component.html
@@ -12,4 +12,5 @@
     <app-radar-chart-writing></app-radar-chart-writing>
   </div>
 </div>
-<app-report-emotion-button></app-report-emotion-button>
+<app-report-emotion-button class="btn btn-help" (click)="helpWindow()"></app-report-emotion-button>
+
